--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -9,6 +9,10 @@ on:
     types: [post]
   workflow_dispatch:  # Allow manual trigger from GitHub UI
 
+# Need write permissions to push state back
+permissions:
+  contents: write
+
 jobs:
   post:
     runs-on: ubuntu-latest
@@ -16,6 +20,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -35,6 +41,20 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add posted.json queue.json 2>/dev/null || true
-          git diff --staged --quiet || git commit -m "Update bot state [skip ci]"
-          git push || true
+
+          # Ensure files exist
+          touch posted.json queue.json
+
+          # Pull latest to avoid conflicts
+          git pull --rebase || true
+
+          # Add and commit
+          git add posted.json queue.json
+
+          # Only commit if there are changes
+          if ! git diff --staged --quiet; then
+            git commit -m "Update bot state [skip ci]"
+            git push
+          else
+            echo "No state changes to commit"
+          fi
